fix: overscroll bg color on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,4 +16,8 @@
         font-weight: 400;
         src: url('/fonts/VCR-OSD-MONO.ttf');
     }
+
+    html {
+        background-color: #000;
+    }
 }
